# Labs

Curso_Python/.github/workflows/: ci.yml
Curso_Python/APIswebconFastAPI/app/: auth.py  db.py  deps.py  main.py  models.py  schemas.py
Curso_Python/APIswebconFastAPI/app/routers/: orders.py
Curso_Python/APIswebconFastAPI/test/: test_orders.py
Curso_Python/AccesoadatosyORM/: database.py  lab_orm_sqlalchemy.py  models.py
Curso_Python/ArquitecturaHexagonal(PuertosyAdaptadores)/: lab_hexagonal.py  test_hexagonal.py
Curso_Python/Cienciadedatos/: data.csv  lab_datascience.py
Curso_Python/Concurrenciayrendimiento/: lab_concurrency.py
Curso_Python/Entornoyherramientas/: Test
Curso_Python/Entornoyherramientas/entorno_herramientas/: .pre-commit-config.yaml  alembic.ini  example.db  fastapi.db  model.pkl  pyproject.toml
Curso_Python/Entornoyherramientas/entorno_herramientas/Tipadoestáticoopcionalycalidad/: lab_typing_quality.py
Curso_Python/Entornoyherramientas/entorno_herramientas/alembic/: env.py
Curso_Python/Entornoyherramientas/entorno_herramientas/alembic/versions/: 353519207212_initial_schema.py  77fa4095ce7e_create_orders_table.py
Curso_Python/Entornoyherramientas/entorno_herramientas/src/entorno_herramientas/: demo.py
Curso_Python/Funcionesyprogramaciónpythonic/: lab_pythonic.py
Curso_Python/Fundamentosdellenguaje/: datos.json  lab_json.py
Curso_Python/HTTPyconsumodeAPIs/: lab_http_client.py
Curso_Python/LibreríaestándaryES/: lab_io_stdlib.py
Curso_Python/LibreríaestándaryES/data/: metrics.json  sales.csv
Curso_Python/Objetosymodelosdedatos/: app.py
Curso_Python/Patronesdediseno/: lab_patterns.py  test_patterns.py
Curso_Python/PrincipiosSOLIDaplicadosenPython/: lab_solid.py
Curso_Python/Proyecto/: Dockerfile  README.md  api.py  audit.txt  auth.py  db.py  main.py  models.py  notifier_http.py  ports.py  repo_memory.py  repo_sql.py  test_e2e.py  test_project.py  use_cases.py
Curso_Python/Proyecto/alembic/: env.py
Curso_Python/PruebasyTDD/: tdd_order.py  test_tdd_order.py
Curso_Python/Tipadoestáticoopcionalycalidad/: lab_typing_quality.py
