[project]
name = "entorno-herramientas"
version = "0.1.0"
description = ""
authors = [
    {name = "Dennis Torres",email = "dennis.torres@axity.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "entorno_herramientas", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["entorno_herramientas"]
combine_as_imports = true
force_sort_within_sections = true


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "C4",
    "UP"
]
ignore = [
    "E203",
    "E266",
    "E501",
    "E402"
]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "hypothesis (>=6.152.4,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"